--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,8 @@
   },
   "rules": {
     "no-underscore-dangle": ["error", { "allow": ["_id"] }],
-    "no-console": "off"
+    "no-console": "off",
+    "linebreak-style":"off"
+
   }
 }
